# knowledge-gap-detection

./: Data_Flow_diagram.md  app.py  architecture.md  link.txt  pyproject.toml  requirements.txt
flowchart/: Workflow_Diagrams.md
notebooks/nlp/: com-1.md  com-2.md  com-3-lstm.md  extend-4.md
src/nlpproject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
