[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlpproject"
version = "0.0.1"
description = "Knowledge gap detection"
readme = "README.md"
authors = [
    { name = "Asutosh", email = "ashutoshsidhya69@gmail.com" }
]
license = { text = "Specify your license here" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["NLP", "end-to-end", "project"]

[project.urls]
Homepage = "https://github.com/sidhyaashu/knowledge-gap-detection.git"
Repository = "https://github.com/sidhyaashu/knowledge-gap-detection.git"

[tool.setuptools.packages.find]
where = ["src"]